--- a/project/Speech_Debate_Club_Application/client/creative.html
+++ b/project/Speech_Debate_Club_Application/client/creative.html
@@ -62,7 +62,7 @@
                 <h5 class="header col s12 light"><a class="" href="{{pathFor route='signup'}}">Sign up</a> to get started.</h5>
               </div>
               <div class="row center">
-                <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal">Log In</a>
+                <a href="{{pathFor route = 'login'}}" id="download-button" class="btn-large waves-effect waves-light teal">Log In</a>
               </div>
               <br><br>
 
@@ -70,10 +70,10 @@
           </div>
 
 
-          <div class="container">
+          <!--<div class="container">
             <div class="section">
 
-              <!--   Icon Section   -->
+
               <div class="row">
                 <div class="col s12 m4">
                   <div class="icon-block">
@@ -109,7 +109,7 @@
             <div class="section">
 
             </div>
-          </div>
+          </div>-->
 
 
   <!--<section id="about" class="bg-gray">
@@ -195,7 +195,7 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
             </div>
         </div>
     </section>-->
-  <!-- <footer class="footer" style="background-image: url('/img/bg-footer.jpg')">
+  <!--<footer class="footer" style="background-image: url('/img/bg-footer.jpg')">
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-4 contact-details">
@@ -216,7 +216,7 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
     </footer>-->
     <!-- Portfolio Modals -->
     <!-- Example Modal 1 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-1.jpg')">
+    <!--<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-1.jpg')">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -257,9 +257,9 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Example Modal 2 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-2.jpg')">
+    <!--<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-2.jpg')">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -300,9 +300,9 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Example Modal 3 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-3.jpg')">
+    <!--<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-3.jpg')">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -329,9 +329,9 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Example Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-4.jpg')">
+    <!--<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-4.jpg')">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -372,7 +372,7 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Core Scripts -->
     <script src="client/vitality-dist.js/jquery.js"></script>
     <script src="client/vitality-dist.js/bootstrap/bootstrap.min.js"></script>
