--- a/project/Speech_Debate_Club_Application/client/login.html
+++ b/project/Speech_Debate_Club_Application/client/login.html
@@ -6,7 +6,7 @@
 
   <template name="login">
     <div class="container">
-      <h3>user login</h3>
+      <h3>User Login</h3>
       <form class="login">
           <p>Email: <input type="email" placeholder="enter email address..." name="email"></p>
           <p>Password: <input type="password" placeholder="enter password..." name="password"></p>
