added wrong login alert

--- a/project/Speech_Debate_Club_Application/client/creative.html
+++ b/project/Speech_Debate_Club_Application/client/creative.html
@@ -56,7 +56,7 @@
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
               <br><br>
-              <img src="evsdlogo.png">
+              <img src="https://raw.githubusercontent.com/bananabot1024/EVSDWebsite/master/project/Speech_Debate_Club_Application/client/evsd.png" height="30%" width="30%" class="center-block">
               <h1 class="header center teal-text">Evergreen Valley High School Speech and Debate Web Portal</h1>
               <div class="row center">
                 <h5 class="header col s12 light"><a class="" href="{{pathFor route='signup'}}">Sign up</a> to get started.</h5>
