--- a/project/Speech_Debate_Club_Application/client/creative.html
+++ b/project/Speech_Debate_Club_Application/client/creative.html
@@ -64,6 +64,14 @@
               <div class="row center">
                 <a href="{{pathFor route = 'login'}}" id="download-button" class="btn-large waves-effect waves-light teal">Log In</a>
               </div>
+
+
+              <!--for testing-->
+              <!--<div class="row center">
+                <a href="{{pathFor route = 'tournamentregistration'}}" id="download-button" class="btn-large waves-effect waves-light teal">Register for a Tournament</a>
+              </div>-->
+
+
               <br><br>
 
             </div>
