--- a/project/Speech_Debate_Club_Application/client/creative.html
+++ b/project/Speech_Debate_Club_Application/client/creative.html
@@ -133,7 +133,7 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
             </div>
         </div>
     </section>
-    <aside id = "services" class="cta-quote" style="background-image: url('/img/creative/suits.jpg');">
+    <aside id = "services" class="cta-quote" style="background-image: url('public/img/creative/suits.jpg');">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 wow fadeIn">
