--- a/project/Speech_Debate_Club_Application/client/creative.html
+++ b/project/Speech_Debate_Club_Application/client/creative.html
@@ -56,14 +56,17 @@
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
               <br><br>
-              <img src="evsdlogo.png">
-              <h1 class="header center teal-text">Evergreen Valley High School Speech and Debate Web Portal</h1>
+              <img src="https://raw.githubusercontent.com/EVSD/EVSDWebsite/ui/project/evsdlogo.png" height="300" width="300" class="center-block">
+              <h1 class="header center teal-text">Evergreen Valley High School Speech and Debate</h1>
               <div class="row center">
                 <h5 class="header col s12 light"><a class="" href="{{pathFor route='signup'}}">Sign up</a> to get started.</h5>
               </div>
               <div class="row center">
-                <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal">Log In</a>
+                <a href="{{pathFor route='login'}}" id="download-button" class="btn-large waves-effect waves-light teal">Log In</a>
               </div>
+
+              <center style="color:white">Hey look hidden text</center>
+
               <br><br>
 
             </div>
