image filetype hotfix

--- a/project/client/creative.html
+++ b/project/client/creative.html
@@ -56,7 +56,7 @@
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
               <br><br>
-              <img src="https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/evsdlogo.jpg" height="300" width="300" class="center-block">
+              <img src="https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/evsdlogo.png" height="300" width="300" class="center-block">
               <h1 class="header center teal-text">Evergreen Valley High School Speech and Debate</h1>
               <div class="row center">
                 <h5 class="header col s12 light"><a class="" href="{{pathFor route='signup'}}">Sign up</a> to get started.</h5>
