--- a/project/client/creative.html
+++ b/project/client/creative.html
@@ -21,7 +21,7 @@
         <nav>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="nav-wrapper teal">
-              <span class="flow-text">   &nbsp;&nbsp;&nbsp;EVSD</span>
+              <span class="flow-text">&nbsp;&nbsp;&nbsp;EVSD</span>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li class="hidden">
                         <a class="page-scroll" href="#page-top"></a>
@@ -65,64 +65,17 @@
                 <a href="{{pathFor route='login'}}" id="download-button" class="btn-large waves-effect waves-light teal">Log In</a>
               </div>
 
-              <center style="color:white">Hey look hidden text</center>
-
               <br><br>
 
             </div>
           </div>
 
-
-          <div class="container">
-            <div class="section">
-
-              <!--   Icon Section   -->
-              <div class="row">
-                <div class="col s12 m4">
-                  <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-                    <h5 class="center">Speeds up development</h5>
-
-                    <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-                  </div>
-                </div>
-
-                <div class="col s12 m4">
-                  <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-                    <h5 class="center">User Experience Focused</h5>
-
-                    <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-                  </div>
-                </div>
-
-                <div class="col s12 m4">
-                  <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Easy to work with</h5>
-
-                    <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-            <br><br>
-
-            <div class="section">
-
-            </div>
-          </div>
-
-
-  <!--<section id="about" class="bg-gray">
+  <section id="about" class="bg-gray">
         <div class="container-fluid">
             <div class="row text-center">
                 <div class="col-lg-12 wow fadeIn">
                     <h1>This is what we do</h1>
                     <p>Throughout the course of history, words have been some of the most powerful agents of change. Words have the power to change people's thoughts, actions, and most importantly, their hearts.
-
-
 
 Welcome to Evergreen Valley High School Speech & Debate, one of the most successful Speech & Debate programs in the nation.</p>
                     <hr class="colored">
@@ -130,7 +83,7 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
             </div>
         </div>
     </section>
-    <aside id = "services" class="cta-quote" style="background-image: url('/img/creative/suits.jpg');">
+    <aside id = "services" class="cta-quote" style="background-image: url('https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/project/public/img/creative/suits.jpg');">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 wow fadeIn">
@@ -197,8 +150,8 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
                 </div>
             </div>
         </div>
-    </section>-->
-  <!-- <footer class="footer" style="background-image: url('/img/bg-footer.jpg')">
+    </section>
+  <footer class="footer" style="background-image: url('/img/bg-footer.jpg')">
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-4 contact-details">
@@ -216,10 +169,10 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
             <div class="row copyright">
             </div>
         </div>
-    </footer>-->
+    </footer>
     <!-- Portfolio Modals -->
     <!-- Example Modal 1 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-1.jpg')">
+    <!--<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-1.jpg')">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -260,9 +213,9 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Example Modal 2 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-2.jpg')">
+    <!--<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-2.jpg')">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -303,9 +256,9 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Example Modal 3 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-3.jpg')">
+    <!--<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-3.jpg')">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -332,9 +285,9 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Example Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-4.jpg')">
+    <!--<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('/img/creative/portfolio/bg-4.jpg')">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -375,7 +328,7 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Core Scripts -->
     <script src="client/vitality-dist.js/jquery.js"></script>
     <script src="client/vitality-dist.js/bootstrap/bootstrap.min.js"></script>
@@ -398,7 +351,7 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
 <template name = "waiver">
 <embed src = "waiver.pdf" height= "2100px" width="800px">
 </template>
-<!--<template name = "whyjoin">
+<template name = "whyjoin">
   <section id="about">
        <div class="container wow fadeIn">
    <center><h1>Why Join?</h1></center>
@@ -436,7 +389,7 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
            </div>
        </div>
    </section>
-</template>-->
+</template>
 <template name = "memberprofile">
 {{#if currentUser.profile.member}}
 	 <section id="about">
