--- a/project/client/profile.html
+++ b/project/client/profile.html
@@ -1,19 +1,38 @@
 <head>
-
   <!--Import Google Icon Font-->
-      <!--Import materialize.css-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-      <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<link href="bootstrap-editable/css/bootstrap-editable.css" rel="stylesheet">
-<script src="bootstrap-editable/js/bootstrap-editable.js"></script>
-
+  <!--Import materialize.css-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+  <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+  <link href="bootstrap-editable/css/bootstrap-editable.css" rel="stylesheet">
+  <script src="bootstrap-editable/js/bootstrap-editable.js"></script>
 </head>
 
-
   <template name="profile">
+
+    <nav>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="nav-wrapper teal">
+          <span class="flow-text">&nbsp;&nbsp;&nbsp;EVSD</span>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li class="hidden">
+                    <a class="page-scroll" href="#page-top"></a>
+                </li>
+                  <li>
+                    <a> {{currentUser.username}}</a>
+                  </li>
+                  <li>
+                    <a class="btn" href="{{pathFor route='home'}}"> Home</a>
+                  </li>
+                  <li>
+                    <a class="btn" href="{{pathFor route='logout'}}"> Logout</a>
+                  </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </nav>
+    <br><br>
     <div class="main center">
           <a href="{{pathFor route='home'}}" class=""><i class="material-icons" style="font-size:50px; color:#e74c3c;">cancel</i></a> <br><br>
            <img class="prof" src="http://www.healthsciences.vcu.edu/media/ovphs/ipe/images/profiles/placeholder-man.png">
@@ -85,7 +104,3 @@
 
        </div>
   </template>
-  <body>
-       <!--Import jQuery before materialize.js-->
-
-     </body>
