browser icons are cool

--- a/project/client/creative.html
+++ b/project/client/creative.html
@@ -11,6 +11,8 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 
+    <link rel="icon" href="https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/evsdlogo.png">
+
 </head>
 <!-- Alternate Body Classes: .modern and .vintage -->
 
