--- a/project/client/creative.html
+++ b/project/client/creative.html
@@ -69,6 +69,8 @@
 
               <br><br>
 
+              <center style="color:white">Hey look hidden text</center>
+
             </div>
           </div>
 
