--- a/project/client/login.html
+++ b/project/client/login.html
@@ -3,14 +3,50 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
 </head>
 
-
   <template name="login">
-    <div class="container">
-      <h3>User Login</h3>
-      <form class="login">
-          <p>Email: <input type="email" placeholder="enter email address..." name="email"></p>
-          <p>Password: <input type="password" placeholder="enter password..." name="password"></p>
-          <p><input type="submit" value="Login"></p>
-      </form>
-    </div>
+    <img src="https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/project/public/img/creative/portfolio/bg-4.jpg" style="min-height:100%;min-width:1024px;width:100%;height:auto;position:fixed;top:0;left:0;">
+    <nav>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="nav-wrapper transparent">
+        <span class="flow-text">&nbsp;&nbsp;&nbsp;EVSD</span>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li class="hidden">
+            <a class="page-scroll" href="#page-top"></a>
+          </li>
+          <li>
+            <a class="page-scroll btn" href="{{pathFor route='home'}}">Home</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </nav>
+    <div class="row">
+       <div class="col s12 m6">
+         <div class="card blue-grey darken-1" style="position:absolute;top:50%;left:50%;transform:translateX(-50%)translateY(-50%);">
+           <div class="card-content white-text">
+             <span class="card-title">User Login</span>
+             <br>
+             <label id="42" style="color:#ff6666"></label>
+             <form class="login">
+               <div class="row">
+                 <div class="input-field col s12">
+                   <i class="material-icons prefix">email</i>
+                   <input type="email" name="emailAddress" class="validate" required>
+                   <label for="emailAddress">Email</label>
+                 </div>
+               </div>
+
+               <div class="row">
+                 <div class="input-field col s12">
+                   <i class="material-icons prefix">lock_outline</i>
+                   <input type="password" name="password" class="validate" required>
+                   <label for="password">Password</label>
+                 </div>
+               </div>
+                 <button class="btn" type="submit">Login</button>
+             </form>
+           </div>
+         </div>
+       </div>
+     </div>
   </template>
