--- a/project/client/creative.html
+++ b/project/client/creative.html
@@ -5,14 +5,6 @@
     <meta name="author" content="">
     <title>EVSD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
-    <link rel="stylesheet" href="client/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="client/stylesheets/vitality-dist/css/plugins/animate.css">
-    <link rel="stylesheet" href="client/stylesheets/vitality-dist/css/plugins/background.css">
-    <link rel="stylesheet" href="client/stylesheets/vitality-dist/css/plugins/magnific-popup.css">
-    <link rel="stylesheet" href="client/stylesheets/vitality-dist/css/plugins/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="client/stylesheets/vitality-dist/css/plugins/owl-carousel/owl.theme.css">
-    <link rel="stylesheet" href="client/stylesheets/vitality-dist/css/plugins/owl-carousel/owl.transitions.css">
-    <link rel="stylesheet" href="client/stylesheets/vitality-dist/css/vitality-aqua.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
     <link rel="icon" href="https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/evsdlogo.png">
     <!-- Core Scripts -->
@@ -34,6 +26,7 @@
     <script src="client/js/scrollreveal.min.js"></script>
     <!-- Vitality Theme Scripts -->
     <script src="client/vitality-dist.js/vitality.js"></script>
+    <script src="client/js/creative.min.js"></script>
 
 </head>
 
