--- a/project/client/creative.html
+++ b/project/client/creative.html
@@ -99,11 +99,11 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
                                             <span class="name">Professor Minh A. Luong </span>
                                             <p class="small"> Yale University</p>
                                             <div class="stars">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star</i>
                                             </div>
                                         </div>
                                     </div>
@@ -121,11 +121,11 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
                                         <div class="testimonial-author">
                                             <span class="name">Wall Street Journal</span>
                                             <div class="stars">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star</i>
+                                                <i class="material-icons">star</i>
                                             </div>
                                         </div>
                                     </div>
@@ -142,7 +142,7 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
             <div class="row">
                 <div class="col-md-4 contact-details">
                     <p>evhs.sd@gmail.com
-                    <h4><i class="fa fa-envelope"></i>Email</h4>
+                    <h4><i class="material-icons">email</i></h4>
                     </p>
                 </div>
             </div>
