fixed radio button input format (only uses one variable)

--- a/project/client/creative.html
+++ b/project/client/creative.html
@@ -30,6 +30,9 @@
                       <li>
                         <a class="btn" href="{{pathFor route='logout'}}"> Logout</a>
                       </li>
+                      <li>
+                        <a class="btn" href="{{pathFor route='tournamentregistration'}}"> Tournament Registration</a>
+                      </li>
                     {{else}}
                     <li>
                        <a class="page-scroll btn" href="{{pathFor route='signup'}}">Sign Up</a>
@@ -159,7 +162,6 @@ Welcome to Evergreen Valley High School Speech & Debate, one of the most success
 
 </template>
 <template name = "waiver">
-  test
   <embed src = "https://drive.google.com/file/d/0B0GF5CUxnsQPRE5Yb2NZZGV3Zmc/view" height= "2100px" width="800px">
 </template>
 <template name = "whyjoin">
